<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.abstratt.simon</groupId>
	<artifactId>simon-parent</artifactId>
	<version>0.0.4-SNAPSHOT</version>
	<packaging>pom</packaging>

	<organization>
		<name>Abstratt Technologies and Contributors</name>
		<url>https://abstratt.com</url>
	</organization>

	<scm>
		<developerConnection>scm:git:https://github.com/abstratt/simon.git
		</developerConnection>
	</scm>


	<distributionManagement>
		<repository>
			<id>github</id>
			<name>Abstratt Maven Repository</name>
			<url>https://maven.pkg.github.com/abstratt/maven-releases</url>
		</repository>
	</distributionManagement>

	<properties>
		<junit.jupiter.version>6.1.0</junit.jupiter.version>
		<auto-service.version>1.1.1</auto-service.version>
		<kotlin.version>2.3.21</kotlin.version>
		<slf4j.version>2.0.17</slf4j.version>

		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<modules>
		<module>gen-utils</module>
		<module>metamodel</module>
		<module>annotation-dsl</module>
		<module>annotation-processor</module>
<!--		<module>kotlin-compiler-plugin</module>-->
		<module>compiler-source</module>
		<module>compiler-backend</module>
		<module>compiler</module>
		<module>antlr-parser</module>
		<module>antlr-compiler</module>
		<module>metamodel-ecore</module>
		<module>compiler-source-ecore</module>
		<module>compiler-source-annotated-java</module>
		<module>compiler-backend-ecore</module>
		<module>compiler-source-simon</module>
		<module>example-languages</module>
		<module>example-languages-kotlin</module>
		<!--<module>lsp-server</module>-->
		<module>test-fixtures</module>
		<module>tests</module>
		<!--<module>tests-kt</module>-->
    </modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.12.0</version>
				<configuration>
					<!-- Default configuration for all reports -->
					<noqualifier>all</noqualifier>
                    <javadocDirectory>javadoc</javadocDirectory>
					<failOnError>false</failOnError>
				</configuration>
				<executions>
					<execution>
						<id>aggregate</id>
						<goals>
							<goal>aggregate</goal>
						</goals>
						<configuration>
							<!-- Specific configuration for the aggregate report -->
							<outputDirectory>${user.dir}/documents</outputDirectory>
							<failOnError>false</failOnError>
							<header>Simon - Reference Implementation</header>
							<footer>Simon - Reference Implementation</footer>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<showWarnings>true</showWarnings>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.5.5</version>
				</plugin>
				<plugin>
					<groupId>org.jetbrains.kotlin</groupId>
					<artifactId>kotlin-maven-plugin</artifactId>
					<version>${kotlin.version}</version>
					<configuration>
					</configuration>
					<executions>
						<execution>
							<id>compile</id>
							<goals>
								<goal>compile</goal>
							</goals>
						</execution>

						<execution>
							<id>test-compile</id>
							<goals>
								<goal>test-compile</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.20.0</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-text</artifactId>
				<version>1.15.0</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.22.0</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.emf</groupId>
				<artifactId>org.eclipse.emf.ecore</artifactId>
				<version>2.42.0</version>
			</dependency>
			<dependency>
				<groupId>io.github.classgraph</groupId>
				<artifactId>classgraph</artifactId>
				<version>4.8.184</version>
			</dependency>
			<dependency>
				<groupId>one.util</groupId>
				<artifactId>streamex</artifactId>
				<version>0.8.4</version>
			</dependency>
			<dependency>
				<groupId>com.google.auto.service</groupId>
				<artifactId>auto-service</artifactId>
				<version>${auto-service.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jetbrains.kotlin</groupId>
				<artifactId>kotlin-compiler-embeddable</artifactId>
				<version>${kotlin.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jetbrains.kotlin</groupId>
				<artifactId>kotlin-stdlib</artifactId>
				<version>${kotlin.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jetbrains.kotlin</groupId>
				<artifactId>kotlin-reflect</artifactId>
				<version>${kotlin.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-simple</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
